# SimplePostAppGemini

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py
app/api/endpoints/: posts.py
app/core/: config.py  database.py
app/crud/: post.py
app/models/: post.py
app/schemas/: post.py
app/templates/: index.html
tests/: conftest.py  test_posts.py
